<resources>
    <string name="app_name">SmartCommunityApp</string>
    <string name="text">elotegev</string>
    <string name="add">Add</string>

    <string-array name="myMenu">
        <item>Home</item>
        <item>My balance</item>
        <item>My tasks</item>
        <item>My event</item>
        <item>My memos</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello from blank fragment</string>
    <string name="myBalance">+ $420</string>
    <string name="title">Groceries</string>
    <string name="info">June 17 by Sheldon Cooper</string>
    <string name="price">$ 47</string>
    <string name="decline">decline</string>
    <string name="pay">pay</string>
    <string name="login">login</string>
    <string name="forget_pass">Forger password?</string>
    <string name="forget_pass_button">Forget password?</string>
    <string name="sign_in_button">Sign in</string>
    <string name="avatar">Avatar</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="con">connect, freely, discover</string>
    <string name="start">start</string>

    <!-- TODO: implement array -->
    <!--<string-array name=""-->
</resources>
